<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">convertidor</string>
    <string name="km_a_millas">De km a millas</string>
    <string name="action_settings">Settings</string>
    <string name="gradosc_a_gradosf">De °C a °F</string>
    <string name="boton">Convertir</string>
    <string name="def_resGrados">0 °C</string>
    <string name="def_resDistancia">0 Millas</string>
    <string name="btn_reset">Reset</string>

</resources>
