<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.convertidor.MainActivity" >

    <TextView
        android:id="@+id/tv_infodistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_a_millas" />

    <EditText
        android:id="@+id/et_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_infodistancia"
        android:layout_alignRight="@+id/tv_infodistancia"
        android:layout_below="@+id/tv_infodistancia"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCdis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_infodistancia"
        android:layout_marginLeft="55dp"
        android:layout_toRightOf="@+id/tv_infodistancia"
        android:onClick="kmToMillas"
        android:text="@string/boton" />

    <Button
        android:id="@+id/btnCgrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_grados"
        android:layout_alignLeft="@+id/btnCdis"
        android:onClick="gradosCtoF"
        android:text="@string/boton" />

    <TextView
        android:id="@+id/tv_infogrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_km"
        android:layout_below="@+id/tv_resDis"
        android:layout_marginTop="49dp"
        android:text="@string/gradosc_a_gradosf" />

    <EditText
        android:id="@+id/et_grados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_infogrados"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/btnCdis"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_resGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCgrados"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/def_resGrados"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_resDis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_km"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/def_resDistancia"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_resDis"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:onClick="reset"
        android:text="@string/btn_reset" />

</RelativeLayout>